# imgui_bootstrap

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
dep/: Makefile
scripts/: run.sh
src/: gui.cpp
